## Process this file with automake to produce Makefile.in

DIST_COMMON = 
DIST_SOURCES = 
EXTRA_DIST = 

bin_PROGRAMS		= hello
hello_SOURCES		= mainx.c
hello_LDADD		= ${top_srcdir}/lib/libhello.la

AM_CFLAGS = -I$(top_srcdir)/include

mainx.o:
	echo "helloooooooooooooooooooooooooooooooooooooooooooooooooo"
	${COMPILE} -c -o mainx.o main.c
